--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ p {
     background-image: url(../images/joel-filipe-rG1LNUFgJhI-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     height: 100vh;
 
 }
