--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,21 @@ p {
     text-align: center;
 
 }
-.wrapper{
+
+.wrapper {
     text-align: center;
 }
+
 .eye {
-    height: 250px;
-    width: 40%;
-    display: inline-block;    
+    height: 30vh;
+    width: auto;
+    align-content: center;
+    padding: 10px;
+    display: inline-block;
+}
+
+.eye img {
+    padding: 15px;
 }
 
 .link a {
@@ -50,51 +58,86 @@ p {
     transition: 0.5s;
 }
 
-.HorrBox{
+.HorrBox {
     background-color: black;
-    color: darkred;
+    color: #ff4d4d;
     border: 2px dotted grey;
     float: right;
     font-size: 20px;
 }
 
-#intro{}
-#audio_control{}
-#display{
-    padding-top: 80px;
-    color: darksalmon;
-    width: 60%; 
+.return {
+    text-decoration: none;
+    color: lightcoral;
+    display: inline-block;
+
 }
 
-#display p{
-    font-size: 1.2em;
-   
+.return:hover {
+    color: #ffff;
 }
-.fade1 p{
+
+#intro:hover {
+    color: #ffff;
+}
+
+#audio_control:hover {
+    color: #ffff;
+}
+
+#display {
+    padding-top: 80px;
+    color: darksalmon;
+    width: 60%;
+}
+
+#display p {
+    font-size: 1.2em;
+
+}
+
+.fade1 p {
     animation-name: fadein;
     animation-fill-mode: forwards;
     animation-duration: 3s;
     animation-delay: 2s;
     opacity: 0;
 }
-.fade2 p{
+
+.fade2 p {
     animation-name: fadeoutV2;
     animation-fill-mode: forwards;
     animation-duration: 3s;
     animation-delay: 2s;
     opacity: 1;
 }
+
 #HList {
     background-color: black;
-    color: darkred;
+    color: #ff4d4d;
     border: 2px dotted grey;
-    float: left; 
+    float: left;
     font-size: 20px;
 }
-#HInput{}
+
+#HInput {}
 
 
+.check {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
 
+.bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
 
 #blood_rain {
     background-image: url(../images/joel-filipe-rG1LNUFgJhI-unsplash.jpg);
@@ -115,13 +158,14 @@ p {
     z-index: 0;
 }
 
-#gamescript{
-    
-}
+@keyframes fadeoutV2 {
+    0% {
+        opacity: 1;
+    }
 
-@keyframes fadeoutV2{
-    0%{opacity: 1;}
-    100%{opacity: 0;}
+    100% {
+        opacity: 0;
+    }
 }
 
 @keyframes fadeout {
@@ -139,6 +183,10 @@ p {
     100% {
         opacity: 1;
     }
+}
+
+#sect p {
+    color: #ffff
 }
 
 #zero {
@@ -193,13 +241,13 @@ p {
 #six {
     animation-name: fadein;
     animation-fill-mode: forwards;
-    animation-delay: 36s;
+    animation-delay: 34s;
     animation-duration: 3s;
     opacity: 0;
 }
 
 #seven {
-    animation-name: fadeout;
+    animation-name: fadein;
     animation-fill-mode: forwards;
     animation-delay: 38s;
     animation-duration: 10s;
